welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: Unmatched closing brace '}' ignored here
}
^